--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                <h2 class="intro_title_b1">Добро пожаловать</h2>
                <h3 class="intro_title_b2">в виртуальную галерею</h3>
                 
-                <a class="btn" href="#s1">Узнать больше</a>
+                <a class="btn" href="#360">Узнать больше</a>
             </div>
         </div>
     </div>
@@ -384,7 +384,7 @@
             <div class="works_item">
                 <img class="works_img" src="assets/images/worcs/3.jpg" alt="">
                 <div class="works_info">
-                    <a class="works_title" href="#" target="_blank">Модель: Новрузова Мелек</a>
+                    <a class="works_title" href="https://www.instagram.com/meleknovruz/" target="_blank">Модель: Новрузова Мелек</a>
                     <div><a class="works_title" href="https://www.instagram.com/valyusha_barnaul/" target="_blank">Художница: Валентина Лопатина</a></div>
                     <div class="works_text">Техника: цифровая живопись</div>
                 </div>
