--- a/index.html
+++ b/index.html
@@ -460,15 +460,15 @@
                             <img class="slider_photo" src="assets/images/wedo/webo4.png">
                             <div class="comment_text"><p>Это что-то новое для меня. Я в первый раз вижу подобную галерею. Мне нравится)</p>
                             </div>
-                            <div class="comment_author">Р.Л</div>
+                            <div class="comment_author">Р.Л.</div>
                         </div>
                     </div>
 		    <div>
                         <div class="slider_item">
                             <img class="slider_photo" src="assets/images/wedo/webo4.png">
-                            <div class="comment_text"><p>Я уже представила как такая картина стоит на моей полке))) Это очень классно!</p>
+                            <div class="comment_text"><p>Я уже представила как такая картина, наклоненая к стене, стоит у нас тумбе в зале))) Это очень классно!</p>
                             </div>
-                            <div class="comment_author">С.С</div>
+                            <div class="comment_author">С.С.</div>
                         </div>
                     </div>
                     
