--- a/index.html
+++ b/index.html
@@ -69,7 +69,8 @@
                 <h5 class="section_title"><p>Как войти в галерею</p></h5>
                 <div class="section_text">
                     <p>Ниже представлено 6 виртуальных комнат, в каждой выставлено по несколько художественных картин. Чтобы зайти в комнату достатачно нажать на изображение. После нажатия откроется выставочный зал 360 градусов. Вы сможете рассматривать пространство во все стороны на 360 градусов, приближать и отдалять изображение. 
-                    </p> 
+                    </p>
+		    <p>Нажмите на изображения ниже, чтобы открыть виртуальную комнату.</p>
                     <p>Приятной и увлекательной прогулки!</p>
                 </div>
             </div>
