--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                     <p>Ниже представлено 6 виртуальных комнат, в каждой выставлено по несколько художественных картин. Чтобы зайти в комнату достатачно нажать на изображение. После нажатия откроется выставочный зал 360 градусов. Вы сможете рассматривать пространство во все стороны на 360 градусов, приближать и отдалять изображение. 
                     </p>
                     <p>Приятной и увлекательной прогулки!</p>
-		    <p>Нажмите на изображения ниже, чтобы открыть виртуальную комнату.</p>
+		    <p>Нажмите на изображения ниже, затем на на название VR комнаты, чтобы её открыть.</p>
                 </div>
             </div>
             
