--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                         <div class="card_img">
                             <img src="assets/images/card/2.jpg" alt="">
                         </div>
-                        <a class="card_text" href="https://momento360.com/e/u/45993f8206db4cd39dc9ead5e1e69425?utm_campaign=embed&utm_source=other&heading=-90.12&pitch=-4.2&field-of-view=75&size=medium>в выставочном зале</a>
+                        <a class="card_text" href="https://momento360.com/e/u/45993f8206db4cd39dc9ead5e1e69425?utm_campaign=embed&utm_source=other&heading=-90.12&pitch=-4.2&field-of-view=75&size=medium">в выставочном зале</a>
                     </div>
                 </div>   
                 
