--- a/index.html
+++ b/index.html
@@ -193,8 +193,8 @@
                     <p>в следующей выставке</p>
                 </h7>
                 <div class="section_text">
-                    <p>Вы можете принять участие в следующей выставке абсолютно <span class="text_bold">бесплатно</span>, по результатам кастинга. Я продолжаю искать новые лица и сюжеты и по сей день.</p>
-                    <p>Так же, выставочное место можно зарезервировать. Стоимость резерва составит <span class="text_bold">200 ₽</span>. Всего выставочных мест в галерее 25. Каждый месяц 15 числа выставка будет обновляться и пополняться новыми картинами.</p>
+                    <p>Вы можете принять участие в следующих выставках абсолютно <span class="text_bold">бесплатно</span>, по результатам кастинга. Я продолжаю искать новые лица и сюжеты и по сей день.</p>
+                    <p>Так же, выставочное место можно зарезервировать. Стоимость резерва составит <span class="text_bold">200 ₽</span>. Всего выставочных мест в галерее 25.</p>
                 </div>
             </div>
             
@@ -288,7 +288,7 @@
                     <p>что вас ждёт</p>
                 </h9>
                 <div class="section_text">
-                    <p>На следующей VR выставки вы увидите <span class="text_bold">Самые яркие работы</span> из всех что были в Галерее 360. Выставка откроется <span class="text_bold">с 15 по 20 НОЯБРЯ</span> 2021 года.</p>
+                    <p>В следующей VR выставки вы увидите <span class="text_bold">Самые яркие работы</span> из всех что были в Галерее 360. Выставка откроется <span class="text_bold">с 15 по 20 НОЯБРЯ</span> 2021 года.</p>
                     <p></p>
                     <p>Картины под масло легко впишутся в любой интерьер от домашнего до офисного. Постеры с природой подойдут для любых комнат. Портреты людей и домашних питомцев - это прекрасные подарки, которые всегда будут служить отличным украшением в доме. А тем более приятно в доме иметь картины собственных воспоминаний.</p>
                     <p>Нажмите на фото ниже, чтобы посмотреть как будет выглядеть диджитал картина по фотографии.</p>
