--- a/index.html
+++ b/index.html
@@ -146,13 +146,13 @@
             <div class="stat">
                 <div class="stat_item">
                     <div>
-                        <a class="stat_count" id="random">1</a>
+                        <a class="stat_count">1</a>
                     </div>
                     <p class="stat_text">посетителей на сайте</p>
                 </div>
                 <div class="stat_item">
                     <div>
-                        <a class="stat_count" id="step">1</a>
+                        <a class="stat_count">43</a>
                     </div>
                     <p class="stat_text">просмотров виртуальных комнат</p>
                 </div>
